@@ -96,8 +96,19 @@
 # firewall after a valid SPA packet is received from the source IP address
 # that matches this stanza's SOURCE.
 #
-# If  FW_ACCESS_TIMEOUT is not set then the fwknopd default timeout of 30
-# seconds will automatically be set.
+# If FW_ACCESS_TIMEOUT is not set then a default timeout of 30 seconds will
+# automatically be set.
+#
+
+# MAX_FW_TIMEOUT     <seconds>
+#
+# Define the maximum length of time access will be granted by fwknop through
+# the firewall after a valid SPA packet is received. This is mostly useful to
+# ensure that clients using the --fw-timeout argument do not grant themselves
+# unduly long access.
+#
+# If MAX_FW_TIMEOUT is not set then a default timeout of 300 seconds (five
+# minutes) will automatically be set.
 #
 
 # ENABLE_CMD_EXEC       <Y/N>
